src/components/navbar/Navbar.scss
header {
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 1;
  nav {
    color: black;
    top: 0;
    ul {
      border-left: 5px solid rgba(14, 85, 167, 0.7);
      list-style: none;
      box-shadow: 0.3px 0.3px 0.3px rgba(0, 0, 0, 0.7);
      li {
        .menu-link {
          display: flex;
          align-items: center;
          text-decoration: none;
          margin-bottom: 10px;
          padding: 5px 10px;
          gap: 10px;
          color: rgba(0, 0, 0, 0.7);
          transition: all 0.5s ease;
          &:hover {
            color: rgba(255, 255, 255, 1);
            background-color: rgba(14, 85, 167, 0.7);
          }
        }
        .active {
          color: rgba(255, 255, 255, 1);
          background-color: rgba(14, 85, 167, 0.7);
        }
      }
    }
    .navbar-menu-links {
      display: flex;
      gap: 20px;
      a {
        color: rgba(0, 0, 0, 1);
        text-decoration: none;
        border: 1px solid rgba(0, 0, 0, 0.1);
        padding: 3px 12px;
        border-radius: 5px;
        font-size: 1.2rem;
        transition: all 0.5s ease;

        &:hover {
          font-weight: bold;
          color: #ffff;
          background-color: #000;
        }

        &.active {
          background-color: rgba(0, 0, 0, 1);
          color: rgba(255, 255, 255, 1);
          font-weight: bold;
        }
      }

      .cart {
        position: relative;
        border: none;
        font-size: 24px;
        padding: 0px 10px;

        &:hover {
          background-color: rgba(0, 0, 0, 0.9);
          color: #fff;
          border-radius: 5px;
        }

        span {
          position: absolute;
          top: -20px;
          right: -10px;
          font-size: 20px;
          font-weight: bold;
        }
        &:hover {
          span {
            color: rgba(0, 0, 0, 0.7);
          }
        }
      }
    }
  }

  .horizontal-nav {
    @media only screen and (min-width: 900px) {
      width: 90%;
      margin: auto;
    }
  }
}

